# codeql-webassembly

./: .gitmodules  README.md  codeql-extractor.yml
extractor/: Cargo.toml
extractor/src/: autobuilder.rs  extractor.rs  generator.rs
ql/lib/: qlpack.yml  webassembly.dbscheme
ql/lib/codeql/webassembly/: Ast.qll  Cfg.qll  Dataflow.qll
ql/lib/codeql/webassembly/ast/internal/: Ast.qll  TreeSitter.qll
ql/lib/codeql/webassembly/controlflow/: BasicBlocks.qll
ql/lib/codeql/webassembly/controlflow/internal/: Cfg.qll
ql/lib/codeql/webassembly/dataflow/: Ssa.qll
ql/lib/codeql/webassembly/ideContextual/: printAst.qll  printAstGenerated.qll
ql/lib/ide-contextual-queries/: printAst.ql  printCfg.ql
ql/lib/test/consistency/: CfgConsistency.ql
ql/lib/test/controlflow/: Cfg.expected  Cfg.ql
scripts/: create-extractor-pack.ps1  create-extractor-pack.sh
tools/: autobuild.cmd  autobuild.sh  index-files.cmd  index-files.sh  qltest.cmd  qltest.sh
tree-sitter-webassembly/: Cargo.toml
tree-sitter-webassembly/bindings/: build.rs  lib.rs
