[package]
name = "tree-sitter-webassembly"
version = "0.1.0"
edition = "2018"

build = "bindings/build.rs"
include = [
    "bindings/*",
    "tree-sitter-wasm/wat/grammar.js",
    "tree-sitter-wasm/wat/src/*",
]

[lib]
path = "bindings/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"